# kakuro

./: .gitignore  Cargo.toml  README.md
examples/: 15x15.kakuro  20x20-solution.json  20x20.kakuro  30x30.kakuro  book.txt  medium.txt  micro.txt  mini.kakuro  mini.txt  u.kakuro  wikipedia.txt
kakuros/: 30x30-solution.json  big.kakuro  huge.kakuro  small.kakuro  wikipedia.kakuro
src/: board.rs  game.rs  generate.rs  import.rs  log.rs  main.rs  svg.rs
src/solvers/: array_vec.rs  better_vecs.rs  connecting_cells.rs  connections.rs  divide.rs  earlier_anchor.rs  early_abort.rs  fxhashmap.rs  gradual.rs  gradual_early_abort.rs  iterative.rs  lazy.rs  mod.rs  naive.rs  no_alloc.rs  only_check_changes.rs  pass_empty_index.rs  prioritize.rs  prioritize_no_set.rs  propagate_constraints.rs  simpler_recursion_anchor.rs  smallvec.rs  solution_in_rc.rs  sum_reachable.rs  sum_reachable_no_set.rs  sum_table.rs
